@@ -69,12 +69,12 @@ cppcheck-result.xml: $(CPPSOURCES)
 	ls lib/*.cc khmer/_khmermodule.cc | grep -v test | cppcheck -DNDEBUG \
 		-DVERSION=0.0.cppcheck -UNO_UNIQUE_RC --enable=all \
 		--file-list=- -j8 --platform=unix64 --std=posix --xml \
-		--xml-version=2 2> cppcheck-result.xml
+		--inline-suppr --xml-version=2 2> cppcheck-result.xml
 
 cppcheck: $(CPPSOURCES)
 	ls lib/*.cc khmer/_khmermodule.cc | grep -v test | cppcheck -DNDEBUG \
 		-DVERSION=0.0.cppcheck -UNO_UNIQUE_RC --enable=all \
-		--file-list=- -j8 --platform=unix64 --std=posix --quiet
+		--file-list=- -j8 --platform=unix64 --std=posix --inline-suppr --quiet
 
 pep8: $(PYSOURCES) $(wildcard tests/*.py)
 	pep8 --exclude=_version.py setup.py khmer/ scripts/ tests/ || true
