@@ -745,9 +745,9 @@ _ReadPairIterator_iternext( PyObject * self )
     uint8_t         pair_mode = myself->pair_mode;
 
     ReadPair    the_read_pair;
-
-    bool    stop_iteration      = false;
-    bool    invalid_file_format     = false;
+		// cppcheck-suppress unreadVariable
+    bool    stop_iteration      = false;  
+		bool    invalid_file_format     = false;
     char    exc_message[ CHAR_MAX ];
     bool    unknown_pair_reading_mode   = false;
     bool    invalid_read_pair       = false;
@@ -1991,8 +1991,9 @@ static PyObject * hash_abundance_distribution_with_reads_parser(
 
     read_parsers:: IParser * rparser = rparser_obj->parser;
     Hashbits * hashbits = tracking_obj->hashbits;
-
-    HashIntoType * dist = NULL;
+		
+		// cppcheck-suppress unreadVariable
+    HashIntoType * dist = NULL;  
 
     Py_BEGIN_ALLOW_THREADS
     dist = counting->abundance_distribution(rparser, hashbits);
