@@ -40,7 +40,8 @@ protected:
 
     Byte ** _counts;
 
-    virtual void _allocate_counters() {
+    virtual void _allocate_counters()
+    {
         _n_tables = _tablesizes.size();
 
         _counts = new Byte*[_n_tables];
@@ -58,7 +59,8 @@ public:
             get_active_config( ).get_number_of_threads( )
     ) :
         khmer::Hashtable(ksize, number_of_threads),
-        _use_bigcount(false), _bigcount_spin_lock(false) {
+        _use_bigcount(false), _bigcount_spin_lock(false)
+    {
         _tablesizes.push_back(single_tablesize);
 
         _allocate_counters();
@@ -71,12 +73,14 @@ public:
     ) :
         khmer::Hashtable(ksize, number_of_threads),
         _use_bigcount(false), _bigcount_spin_lock(false),
-        _tablesizes(tablesizes) {
+        _tablesizes(tablesizes)
+    {
 
         _allocate_counters();
     }
 
-    virtual ~CountingHash() {
+    virtual ~CountingHash()
+    {
         if (_counts) {
             for (size_t i = 0; i < _n_tables; i++) {
                 if (_counts[i]) {
@@ -92,26 +96,31 @@ public:
         }
     }
 
-    virtual BoundedCounterType test_and_set_bits(const char * kmer) {
+    virtual BoundedCounterType test_and_set_bits(const char * kmer)
+    {
         BoundedCounterType x = get_count(kmer); // @CTB just hash it, yo.
         count(kmer);
         return !x;
     }
 
-    virtual BoundedCounterType test_and_set_bits(HashIntoType khash) {
+    virtual BoundedCounterType test_and_set_bits(HashIntoType khash)
+    {
         BoundedCounterType x = get_count(khash);
         count(khash);
         return !x;
     }
 
-    std::vector<HashIntoType> get_tablesizes() const {
+    std::vector<HashIntoType> get_tablesizes() const
+    {
         return _tablesizes;
     }
 
-    void set_use_bigcount(bool b) {
+    void set_use_bigcount(bool b)
+    {
         _use_bigcount = b;
     }
-    bool get_use_bigcount() {
+    bool get_use_bigcount()
+    {
         return _use_bigcount;
     }
 
@@ -119,13 +128,15 @@ public:
     virtual void load(std::string);
 
     // accessors to get table info
-    const HashIntoType n_entries() const {
+    const HashIntoType n_entries() const
+    {
         return _tablesizes[0];
     }
 
     // count number of occupied bins
     virtual const HashIntoType n_occupied(HashIntoType start=0,
-                                          HashIntoType stop=0) const {
+                                          HashIntoType stop=0) const
+    {
         HashIntoType n = 0;
         if (stop == 0) {
             stop = _tablesizes[0];
@@ -138,12 +149,14 @@ public:
         return n;
     }
 
-    virtual void count(const char * kmer) {
+    virtual void count(const char * kmer)
+    {
         HashIntoType hash = _hash(kmer, _ksize);
         count(hash);
     }
 
-    virtual void count(HashIntoType khash) {
+    virtual void count(HashIntoType khash)
+    {
 
         unsigned int  n_full	  = 0;
 
@@ -177,13 +190,15 @@ public:
     } // count
 
     // get the count for the given k-mer.
-    virtual const BoundedCounterType get_count(const char * kmer) const {
+    virtual const BoundedCounterType get_count(const char * kmer) const
+    {
         HashIntoType hash = _hash(kmer, _ksize);
         return get_count(hash);
     }
 
     // get the count for the given k-mer hash.
-    virtual const BoundedCounterType get_count(HashIntoType khash) const {
+    virtual const BoundedCounterType get_count(HashIntoType khash) const
+    {
         unsigned int	  max_count	= _max_count;
         BoundedCounterType  min_count	= max_count;
         for (unsigned int i = 0; i < _n_tables; i++) {
@@ -269,7 +284,8 @@ public:
 class CountingHashGzFileWriter : public CountingHashFile
 {
 public:
-    CountingHashGzFileWriter(const std::string &outfilename, const CountingHash &ht);
+    CountingHashGzFileWriter(const std::string &outfilename,
+                             const CountingHash &ht);
 };
 };
 
